# litra-autotoggle

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  EXECUTIVE-SUMMARY.md  PLAN-auto-update-checks.md  README.md  SYSTEMD_LINUX.md  example-config.yaml  litra-autotoggle.example.yml  litra-autotoggle.service  rust-toolchain.toml
.github/workflows/: build-and-release.yml  copilot-setup-steps.yml  pre-commit.yml
docs/: DECISION-DIRECT-API.md  README.md  architecture-diagrams.md  auto-update-checks-code-examples.md  auto-update-checks-design-analysis.md  auto-update-checks-implementation-plan.md  auto-update-plan.md  code-examples.md  direct-api-analysis.md  implementation-checklist.md  quick-reference.md
src/: macos_camera.rs  main.rs
