[package]
name = "litra-autotoggle"
version = "1.3.0"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Automatically turn your Logitech Litra device on when your webcam turns on, and off when your webcam turns off"
repository = "https://github.com/timrogers/litra-autotoggle"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "command-line-utilities"]
keywords = ["logitech", "litra", "glow", "beam", "light"]

[[bin]]
name = "litra-autotoggle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
litra = { version = "3.3.0", default-features = false }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.52.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3.27"
