[package]
name = "litra-autotoggle"
version = "1.3.0"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Automatically turn your Logitech Litra device on when your webcam turns on, and off when your webcam turns off"
repository = "https://github.com/timrogers/litra-autotoggle"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "command-line-utilities"]
keywords = ["logitech", "litra", "glow", "beam", "light"]

[[bin]]
name = "litra-autotoggle"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
litra = { version = "3.3.0", default-features = false }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8.20"
tokio = { version = "1.52.1", features = ["full"] }
ureq = { version = "3.0.11", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3.27"
